--- a/stjaume/index.html
+++ b/stjaume/index.html
@@ -1,8 +1,9 @@
 <!-- // This will be the main page -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
     <head>
        <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>Sant Jaume</title>
        <link rel="stylesheet" href="css/stjaume.css">
     </head>
